--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PH-Tube</title>
+    <!-- Daisy UI CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <h1>Welcome to PH Tube</h1>
+    <!-- Nav -->
+    <nav class="sm:flex-row flex justify-between bg-base-100 shadow-sm p-4">
+      <div class="">
+        <img src="./assets/Logo.png" alt="PH-TUBE" />
+      </div>
+      <div class="w-full max-w-xs">
+        <input
+          type="text"
+          placeholder="Search"
+          class="input input-bordered rounded-full border-red-400 outline-none"
+        />
+      </div>
+      <button class="btn">Blog</button>
+    </nav>
   </body>
 </html>
