create button group and load all categories from js

--- a/index.html
+++ b/index.html
@@ -27,5 +27,16 @@
       </div>
       <button class="btn">Blog</button>
     </nav>
+    <!-- Main Content -->
+    <main>
+      <!-- Button Group -->
+      <div class="flex items-center justify-center gap-5 my-4">
+        <button class="btn btn-sm">All</button>
+        <button class="btn btn-sm">All</button>
+        <button class="btn btn-sm">All</button>
+      </div>
+    </main>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
