--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
     </nav>
     <!-- Main Content -->
     <main>
-      <!-- Button Group -->
-      <div class="flex items-center justify-center gap-5 my-4">
-        <button class="btn btn-sm">All</button>
-        <button class="btn btn-sm">All</button>
-        <button class="btn btn-sm">All</button>
+      <!-- Category Button Group -->
+      <div
+        id="category-container"
+        class="flex items-center justify-center gap-5 my-4"
+      >
+        <div>
+          <button class="btn btn-sm bg-red-600 text-white">All</button>
+        </div>
       </div>
     </main>
 
