The Mechanism With Load Video & Display Video Card

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <button class="btn btn-sm bg-red-600 text-white">All</button>
         </div>
       </div>
+
+      <!-- Video section -->
+      <section
+        id="videoContainer"
+        class="grid grid-cols-4 gap-4 px-5"
+      ></section>
     </main>
 
     <script src="./scripts/index.js"></script>
