--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         class="flex items-center justify-center gap-5 my-4"
       >
         <div>
-          <button class="btn btn-sm bg-red-600 text-white">All</button>
+          <button id="btn-all" onclick="loadVideos()" class="btn btn-sm">
+            All
+          </button>
         </div>
       </div>
 
