--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       type="text/css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- custom Style -->
+    <style>
+      .active {
+        background-color: #ef4444;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <!-- Nav -->
