--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           class="input input-bordered rounded-full border-red-400 outline-none"
         />
       </div>
-      <button class="btn">Blog</button>
+      <button class="btn">Sort</button>
     </nav>
     <!-- Main Content -->
     <main>
