--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
         id="videoContainer"
         class="grid grid-cols-4 gap-4 px-5"
       ></section>
+      <!-- Open the modal using ID.showModal() method -->
+      <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+      <dialog id="videoDetailsModal" class="modal">
+        <div class="modal-box">
+          <div id="detailContainer"></div>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <script src="./scripts/index.js"></script>
