Implement search functionality.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="w-full max-w-xs">
         <input
+          id="searchInput"
           type="text"
           placeholder="Search"
           class="input input-bordered rounded-full border-red-400 outline-none"
