Add loading spinner

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </div>
       </div>
 
+      <!-- Loading spinner -->
+      <div id="loadingSpinner" class="text-center py-10 hidden">
+        <span class="loading loading-infinity loading-xl"></span>
+      </div>
       <!-- Video section -->
       <section
         id="videoContainer"
